--- a/config.example.yml
+++ b/config.example.yml
@@ -7,6 +7,6 @@ radarr:
     address: 'x.x.x.x:7878'
     apikey: 'xxx'
 
-sonarr:
-    address: 'x.x.x.x:8989'
-    apikey: 'xxx'
+#sonarr:
+#    address: 'x.x.x.x:8989'
+#    apikey: 'xxx'
